MSS-1265-fixed menu width and alignment

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_menu.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_menu.scss
@@ -153,6 +153,7 @@
                 &:not(.feature-dropdown) {
 
                     .dropdown-menu {
+                        
                         justify-content: flex-start;
                     }
                 }
@@ -697,3 +698,53 @@
     position: relative;
     z-index: 999;
 }
+
+.main-menu{
+    .nav-item{
+        > .dropdown-menu{
+            @include media-breakpoint-up(lg) {
+                width: auto;
+                min-width: 100%;
+            }
+    
+        }
+
+    }
+   
+}
+
+.main-menu {
+
+    .browse-collection {
+        @include media-breakpoint-up(lg) {
+            margin: 0;
+            margin-left: 4.375rem;
+        }
+
+}
+}
+
+.main-menu{
+    .menu-pane{
+        > .ul{
+            @include media-breakpoint-up(lg) {
+                margin-left: 4.375rem;
+            }
+        }
+        
+    }
+}
+
+.main-menu {
+    .dropdown-menu{
+        .featured-promotion{
+
+            @include media-breakpoint-up(lg) {
+                min-width: 200px;
+                margin-left: 4.375rem
+            }
+        }
+
+    }
+
+} 
